# laboratory

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/commands/: start.sh
backend/app/laboratory/: settings.py  urls.py  uwsgi.ini  wsgi.py
backend/app/samples/: models.py  serializers.py  urls.py  viewsets.py
backend/app/samples/migrations/: 0001_initial.py
